File: components/nexus-blobstore-file/src/test/java/org/sonatype/nexus/blobstore/virtualthread/ThreadPinningDetectionTest.java